# Go-Game-Project

./: .gitignore  CMakeLists.txt  README.md
Katago/KataGoData/opencltuning/: tune11_gpuNVIDIAGeForceRTX4060_x19_y19_c64_mv11.txt
include/: Board.h  Cell.h  Component.h  FontManager.h  Game.h  History.h  InGameState.h  Menu.h  Move.h  UI.h
include/AI/: AI.h  KatagoLink.h
include/UI/: Component.h  GameOption.h  InGame.h  Loading.h  Menu.h  UI.h
include/core/: AssetManager.h
include/game/: Board.h  Game.h  History.h  InGameState.h
include/model/: Cell.h  CellState.h  GameState.h  Move.h  MoveVerdict.h  SettingPanel.h  UICfg.h
saved/:  awdawdaw aw da  123  123123  234  BUGHERE  Max  Testing  This is gunny  awda  awdawd  concuto  gaylord  hi  save  save1  save1 - Copy (18)  save2  save3  save6  testbug
src/: Board.cpp  Component.cpp  Game.cpp  History.cpp  UI.cpp  main.cpp  menu.cpp
src/AI/: AI.cpp  KatagoLink.cpp
src/UI/: GameOption.cpp  InGame.cpp  Loading.cpp  Menu.cpp  UI.cpp
src/UI/GameOptionPanel/: GameCustomizeOption.cpp  GameSettingOption.cpp  LoadGameOption.cpp  NewGameOption.cpp
src/component/: Board.cpp  BoardUI.cpp  Button.cpp  Notification.cpp  Scroll.cpp  Slider.cpp  Stone.cpp  TextBox.cpp
src/core/: AssetManager.cpp
src/game/: Board.cpp  Game.cpp  History.cpp
